--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==2.4.2
+cffi==1.14.0
 click==7.1.2
+cryptography==3.0
 Flask==1.1.2
 isort==4.3.21
 itsdangerous==1.1.0
@@ -7,9 +9,11 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pycparser==2.20
 pylint==2.5.3
 six==1.15.0
 toml==0.10.1
+typed-ast==1.4.1
 waitress==1.4.4
 Werkzeug==1.0.1
 wrapt==1.12.1
