--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 astroid==2.4.2
-cffi==1.14.0
 click==7.1.2
-cryptography==3.0
 Flask==1.1.2
 isort==4.3.21
 itsdangerous==1.1.0
@@ -9,8 +7,8 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pycparser==2.20
-pylint==2.5.3
+pip-autoremove==0.9.1
+pycryptodome==3.9.8
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
